# celus-pycounter

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml
celus_pycounter/: __init__.py  constants.py  csvhelper.py  helpers.py  report.py  sushi.py  sushi5.py  sushiclient.py  version.py
pycounter/: constants.py  report.py  sushi.py  sushi5.py
pycounter/test/: conftest.py  test_br2.py  test_br3.py  test_date_parsing.py  test_jr1_csv.py  test_mr1.py  test_output_common.py  test_sushi.py
pycounter/test/data/: BR1-missing-months.csv  C4JR1a.csv  C4MR1.tsv
tests/: __init__.py  conftest.py  test_bad_reports.py  test_br1.py  test_br2.py  test_br3.py  test_br_common.py  test_classes.py  test_date_parsing.py  test_db2.py  test_db_common.py  test_helpers.py  test_jr1_csv.py  test_jr1_tabs.py  test_jr1_xslx.py  test_jr2.py  test_mr1.py  test_output_common.py  test_output_jr1.py  test_pr1.py  test_sushi.py  test_unicode.py
tests/counter5/: conftest.py  test_sushi.py  test_trj1.py
tests/data/: BR1-ok-months.csv  C4BR1.tsv  C4BR2.tsv  C4BR3.tsv  C4JR1GOA.csv  C4JR2.csv  sushi_jr1a.xml  sushi_missing_ii.xml  sushi_mr1.xml
