[build-system]
requires = ["poetry>=1.7.0"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 100
src = ["celus_pycounter", "tests"]

[tool.ruff.lint]
select = [
	# Pyflakes
	"F",
	# pycodestyle
	"E",
	# isort
	"I",
]


[tool.ruff.lint.isort]
known-first-party = ["celus_pycounter"]

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.poetry]
name = "celus-pycounter"
version = "5.0.0"
description = "Project COUNTER/NISO SUSHI statistics"
authors = [
	"Geoffrey Spear <speargh@pitt.edu>",
	"Beda Kosata <beda@bigdigdata.com>",
	"Stepan Henek <stepan@bigdigdata.com>",
]
license = "MIT"
classifiers = [
	"Topic :: Software Development :: Libraries",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
]
keywords = ["COUNTER", "SUSHI"]
documentation = "https://github.com/Big-Dig-Data/celus-pycounter/blob/master/README.rst"

[tool.poetry.scripts]
sushiclient = 'celus_pycounter.sushiclient:main'

[tool.poetry.dependencies]
python = "^3.12"

click = "~8.3.0"
lxml = "~6.0.2"
openpyxl = "~3.1.2"
pendulum = "~3.1.0"
requests = "~2.32.5"

[tool.poetry.dev-dependencies]
build = "~1.3.0"
httmock = "~1.4.0"
mock = "~5.2.0"
mypy = "^1.6"
pre-commit = "~4.3.0"
pytest = "~8.4.2"
pytest-cov = "~7.0.0"
ruff = "~0.14.3"
